crates/wac-parser/tests/resolution/fail/mismatched-kind/foo/bar.wat
(component
  (instance (import "x")
    (export "x" (func))
  )
)
